--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-static-gzip",
   "version": "2.1.7",
-  "description": "simple wrapper on top of express.static, that allows serving pre-gziped files",
+  "description": "A simple middleware for serving folders of gzipped files with the sendFile method",
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
@@ -22,20 +22,14 @@
     "serve",
     "compression"
   ],
-  "author": "Tobias Koenig <tobiaskoenig1@gmail.com>",
+  "author": "Nicholas Clack (Hedgehog125)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tkoenig89/express-static-gzip"
+    "url": "https://github.com/hedgehog125/express-static-gzip-sendfile.git"
   },
   "license": "MIT",
   "dependencies": {
-    "serve-static": "^1.14.1"
+    "mime-types": "^2.1.35"
   },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "express": "^4.16.3",
-    "mocha": "^5.2.0",
-    "nyc": "^15.1.0",
-    "request": "^2.87.0"
-  }
+  "devDependencies": {}
 }
