--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-precompressed",
-  "version": "0.1.0a",
+  "version": "1.0.0",
   "description": "A simple middleware for serving folders of compressed or uncompressed files",
   "main": "index.js",
   "files": [
@@ -26,7 +26,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "express": "^4.18.1",
     "mime-types": "^2.1.35"
-  },
-  "devDependencies": {}
+  }
 }
